fifth stage completed